Fix chrome://site-engagement in incognito mode.

BUG=596361

Review URL: https://codereview.chromium.org/1821563002

Cr-Commit-Position: refs/heads/master@{#382520}

Former-commit-id: 9d3afe9bb9f6e45a88d03529f14875616a673dc3