chrome/browser/ui/webui/engagement/site_engagement_ui.cc
@@ -76,6 +76,11 @@ class SiteEngagementUIHandlerImpl : public SiteEngagementUIHandler {
 
 SiteEngagementUI::SiteEngagementUI(content::WebUI* web_ui)
     : MojoWebUIController<SiteEngagementUIHandler>(web_ui) {
+  // Incognito profiles will not have a site engagement service.
+  Profile* profile = Profile::FromWebUI(web_ui);
+  if (!SiteEngagementService::Get(profile))
+    return;
+
   // Set up the chrome://site-engagement/ source.
   scoped_ptr<content::WebUIDataSource> source(
       content::WebUIDataSource::Create(chrome::kChromeUISiteEngagementHost));
@@ -84,8 +89,7 @@ SiteEngagementUI::SiteEngagementUI(content::WebUI* web_ui)
       "chrome/browser/ui/webui/engagement/site_engagement.mojom",
       IDR_SITE_ENGAGEMENT_MOJO_JS);
   source->SetDefaultResource(IDR_SITE_ENGAGEMENT_HTML);
-
-  content::WebUIDataSource::Add(Profile::FromWebUI(web_ui), source.release());
+    content::WebUIDataSource::Add(profile, source.release());
 }
 
 SiteEngagementUI::~SiteEngagementUI() {}
